# nonmanifold-laplacian-cpp

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
include/nonmanifoldlaplacian/: bubble_offset.h  point_cloud_utilities.h  robust_laplacian.h
src/: bubble_offset.cpp  point_cloud_utilities.cpp  robust_laplacian.cpp
